Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-39333

Rollback of abort loads old prepare into HT

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 6.6.0
    • 6.5.1, 6.6.0, 6.5.0
    • couchbase-bucket
    • Ubuntu 1804
      Couchbase Server: 6.6.0-7618-1

    Description

      Error logs found during kv-engine-mad-hatter-jepsen-nightly-526 for test lein trampoline run test --nodes-file ./nodes --username root --password couchbase --workload=kill --scenario=kill-memcached --replicas=2 --no-autofailover --durability=0:0:0:100 --eviction-policy=value --use-json-docs --doc-padding-size=4096 --enable-tcp-capture --hashdump --enable-memcached-debug-log-level --net-interface=eth0.

      Error messages:

      ./172.23.105.175/cbcollect_info_ns_1@172.23.105.175_20200513-014607/memcached.log:2020-05-12T18:45:01.600146-07:00 ERROR 53: exception occurred in runloop during packet execution. Cookie info: [{"aiostat":"success","connection":"[ 127.0.0.1:44257 - 127.0.0.1:11209 (<ud>@ns_server</ud>) ]","engine_storage":"0x00007ff7cd0bde10","ewouldblock":false,"packet":{"bodylen":26,"cas":0,"datatype":"raw","extlen":16,"key":"<ud>jepsen0028</ud>","keylen":10,"magic":"ClientRequest","opaque":101,"opcode":"DCP_ABORT","vbucket":354},"refcount":1}] - closing connection ([ 127.0.0.1:44257 - 127.0.0.1:11209 (<ud>@ns_server</ud>) ]): GSL: Precondition failure at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/vbucket.cc: 999
      ./172.23.105.175/cbcollect_info_ns_1@172.23.105.175_20200513-014607/memcached.log:2020-05-12T18:45:02.693922-07:00 ERROR 53: exception occurred in runloop during packet execution. Cookie info: [{"aiostat":"success","connection":"[ 127.0.0.1:43007 - 127.0.0.1:11209 (<ud>@ns_server</ud>) ]","engine_storage":"0x00007ff7cd0bf710","ewouldblock":false,"packet":{"bodylen":26,"cas":0,"datatype":"raw","extlen":16,"key":"<ud>jepsen0028</ud>","keylen":10,"magic":"ClientRequest","opaque":101,"opcode":"DCP_ABORT","vbucket":354},"refcount":1}] - closing connection ([ 127.0.0.1:43007 - 127.0.0.1:11209 (<ud>@ns_server</ud>) ]): GSL: Precondition failure at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/vbucket.cc: 999
      ./172.23.105.175/cbcollect_info_ns_1@172.23.105.175_20200513-014607/memcached.log:2020-05-12T18:45:07.638375-07:00 ERROR 53: exception occurred in runloop during packet execution. Cookie info: [{"aiostat":"success","connection":"[ 127.0.0.1:38203 - 127.0.0.1:11209 (<ud>@ns_server</ud>) ]","engine_storage":"0x00007ff7cd139410","ewouldblock":false,"packet":{"bodylen":26,"cas":0,"datatype":"raw","extlen":16,"key":"<ud>jepsen0028</ud>","keylen":10,"magic":"ClientRequest","opaque":101,"opcode":"DCP_ABORT","vbucket":354},"refcount":1}] - closing connection ([ 127.0.0.1:38203 - 127.0.0.1:11209 (<ud>@ns_server</ud>) ]): GSL: Precondition failure at /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/vbucket.cc: 999
      

      Attachments

        For Gerrit Dashboard: MB-39333
        # Subject Branch Project Status CR V

        Activity

          People

            ashwin.govindarajulu Ashwin Govindarajulu
            richard.demellow Richard deMellow
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty