MB-39333: Ignore unpersisted aborts during rollback

Rolling back an unpersisted abort erroneously tried to load an earlier
version of the document from disk. This instead loaded an older prepare
into memory - even though the _commit_ for that prepare was not rolled
back.

E.g.,

 Seqno   Operation

 1       Prepare
 2       Commit
 3       Prepare
 4       Abort

 Rollback to seqno 2.

This should leave only the committed value at seqno 2 in the hashtable.
Instead, when processing the abort at seqno 4
EPBucket::rollbackUnpersistedItems loaded the prepare at seqno 1 back
into memory.

Aborts remove the prepared document from the hashtable, so
EPBucket::rollbackUnpersistedItems does not need to do anything to roll
an abort back.

Had the rollback been to seqno 3, EPBucket::loadPreparedSyncWrites
would handle reloading the prepare into the hashtable.

Change-Id: Ib73e81c52dd56f99c7390e1ec8ac47ce84a41e21
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/128625
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>